fixed header on mobile and made buttons larger

--- a/app/public/css/style.css
+++ b/app/public/css/style.css
@@ -7,21 +7,35 @@ i {
     margin-left: 10%;
 }
 
-/* h1 {
+h1 {
     font-size: 4rem;
-} */
+}
 
-@media (max-width: 600px) and (max-width: 1000px) {
+p {
+    font-size: 3.5rem;
+}
+
+@media (max-width: 1000px) {
+    h1 {
+      font-size: 3rem;
+    }
+
+    #point-total {
+        font-size: 3rem;
+    }
+}
+
+@media (max-width: 800px) {
     h1 {
       font-size: 2rem;
     }
-  }
+}
 
-/* @media (min-width: 600px) {
+@media (max-width: 500px) {
     h1 {
-      font-size: 4rem;
+      text-align: center;
     }
-  } */
+}
 
   h1, h3, p {
     color: white;
@@ -33,10 +47,6 @@ hr {
 
 .fancy-font {
     font-family: 'Nerko One', cursive;
-}
-
-#point-total {
-    font-size: 2rem;
 }
 
 #reset {
